--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voice-chat-bot-live-agent",
+  "name": "real-chat-bot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
-    "vite": "^6.3.5"
+    "vite": "^6.2.0"
   }
 }
